Hide empty span on bcc badge to avoid extra padding

--- a/component-library/src/components/custom/BccBadge/BccBadge.css
+++ b/component-library/src/components/custom/BccBadge/BccBadge.css
@@ -4,6 +4,9 @@
 
 		@apply bg-ctx text-ctx;
 	}
+	.bcc-badge span:empty {
+		display: none;
+	}
 	.bcc-badge.gradient {
 		@apply ctx-gradient;
 	}
